# manyevents

./: .env.example  .gitignore  .pre-commit-config.yaml  INSTALL.md  LICENSE  Makefile  README.md  Rocket.toml  docker-compose.yaml
.github/workflows/: build-and-test.yml  release.yml
manyevents/: Cargo.toml  query.sql
manyevents/db/migrations/: 20241019100828_create_tables.sql
manyevents/src/: auth.rs  ch.rs  main.rs  proto.rs  schema.rs  scope.rs  settings.rs  tenant.rs  writer.rs
manyevents/static/assets/: test.html  web.js
manyevents/static/schemas/: web-input.json  web-output.json
manyevents/static/templates/: base.html.j2  dashboard.html.j2  docs.html.j2  index.html.j2  signin.html.j2
nginx/: nginx.conf
scripts/: build-and-test.sh  make-release.sh
