[package]
name = "manyevents"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_derive = "1.0"
clickhouse = "0.13.1"
tokio = { version = "1", features = ["full"] }

rocket = { version = "0.5", features = ["json", "uuid"] }

serde = { version = "1.0", features = ["derive"] }
log = "0.4"
uuid = { version = "1.11.0", features = ["serde", "v4"] }

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "postgres", "uuid"] }
rstest = "0.23.0"
serde_json = "1.0.133"
tower-http = {version = "0.6.2", features = ["trace"]}
tower = {version = "0.5.2"}
http-body-util = "0.1.2"
axum = "0.7.9"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sha2 = "0.10.8"
hex = { version = "0.4.3", features = ["serde"] }
async-std = { version = "1.13.0", features = ["attributes"] }
hmac = { version = "0.12.1", features = ["std"] }
rand = "0.8.5"
base64 = "0.22.1"
minijinja = { version = "2.5.0", features = ["loader"] }
axum-extra = { version = "0.9.6", features = ["form", "cookie", "typed-header"] }

[dev-dependencies]
clickhouse = { version = "0.13.1", features = ["test-util"] }

